All API endpoints fixed - Energy, Production, Manifest

--- a/vercel.json
+++ b/vercel.json
@@ -21,7 +21,12 @@
     },
     {
       "src": "/manifest.json",
-      "dest": "/frontend/manifest.json"
+      "dest": "/frontend/manifest.json",
+      "headers": { "Cache-Control": "public, max-age=86400" }
+    },
+    {
+      "src": "/favicon.ico",
+      "dest": "/frontend/favicon.ico"
     },
     {
       "src": "/(.*)",
